--- a/command.html
+++ b/command.html
@@ -8,7 +8,24 @@ title: Command
 		<img src="http://placehold.it/300x300" class="unit-s-1-4 unit-m-1-4 unit-l-1-4" alt="">
 		<img src="http://placehold.it/300x300" class="unit-s-1-4 unit-m-1-4 unit-l-1-4" alt="">
 		<img src="http://placehold.it/300x300" class="unit-s-1-4 unit-m-1-4 unit-l-1-4" alt="">
-</div>
+		
+
+	<div class="unit-s-1-4 unit-m-1-4 unit-l-1-4">
+			<h3>Lorem Ipsum</h3>
+			<p>dlkfjasdljflksd</p>
+	
+		
+			<h3>Dolor</h3>
+			<p>dlkfjasdljflksd</p>
+	
+			<h3>Sit Amei</h3>
+			<p>dlkfjasdljflksd</p>
+		
+			<h3>Consectueru</h3>
+			<p>dlkfjasdljflksd</p>
+
+	</div>
+
 
 	<div class="unit unit-s-hidden unit-m-hidden unit-l-1-4">&nbsp;
 	</div>
@@ -22,15 +39,16 @@ title: Command
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		</div>
 	</div>
+	
+	
 
-</div>
 
 <div class="grid">
 
 	<div class="unit unit-s-hidden unit-m-hidden unit-l-1-4">&nbsp;</div>
 
 	<div class="unit unit-s-1 unit-m-1 unit-l-3-4">
-		<img src="http://placehold.it/1600x600&amp;text=Slideshow" class="flex-img" alt="">
+		<img src="http://placehold.it/400x800" class="unit-s-1-4 unit-m-1-4 unit-l-1-4" alt="">
 	</div>
 
 </div>
